--- a/QuantifyThisAndroid/res/values/dimens.xml
+++ b/QuantifyThisAndroid/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">8dp</dimen>
     <dimen name="padding_large">16dp</dimen>
+    <dimen name="margin_bottom_mark_button">50dp</dimen>
 
 </resources>
