added agenda, statistics and settings screens

--- a/QuantifyThisAndroid/res/layout/fragment_home.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_home.xml
@@ -20,10 +20,11 @@
             android:text="@string/button_mark_mood_label" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/button_launch_agenda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="launchActivity"
             android:text="@string/button_agenda_mood_label" />
     </LinearLayout>
 
@@ -34,16 +35,18 @@
         android:gravity="center" >
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button_launch_statistics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="launchActivity"
             android:layout_weight="1"
             android:text="@string/button_statistics_label" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/button_launch_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="launchActivity"
             android:layout_weight="1"
             android:text="@string/button_settings_label" />
     </LinearLayout>
