--- a/QuantifyThisAndroid/res/layout/activity_statistics.xml
+++ b/QuantifyThisAndroid/res/layout/activity_statistics.xml
@@ -4,12 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <fragment
+        android:name="be.mume.quantifythis.fragments.StatisticsFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/label_statistics"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
