--- a/QuantifyThisAndroid/res/layout/fragment_agenda.xml
+++ b/QuantifyThisAndroid/res/layout/fragment_agenda.xml
@@ -4,12 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <ListView
+        android:id="@+id/list_agenda"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/label_statistics"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
