--- a/QuantifyThisAndroid/res/xml/preferences.xml
+++ b/QuantifyThisAndroid/res/xml/preferences.xml
@@ -1,32 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    	android:title="@string/settings_label">
-        <PreferenceCategory
-                android:title="@string/general_category_label">
-                <PreferenceScreen android:key="button_notifications_settings_key"
-            		android:title="@string/notifications_settings_label"
-            		android:persistent="false">
-            		<CheckBoxPreference
-			            android:key="pref_key_agenda_notification_enabled"
-			            android:summary="@string/pref_notifications_enabled_summary"
-			            android:title="@string/pref_notifications_enabled_title"
-			            android:defaultValue="true" />
-            		<CheckBoxPreference
-			            android:key="pref_key_agenda_notification_mode"
-			            android:summary="@string/pref_notifications_agenda_mode_summary"
-			            android:title="@string/pref_notifications_agenda_mode_title"
-			            android:defaultValue="true" />
-                    <ListPreference
-                        android:title="@string/pref_notifications_list_amount_title"
-                        android:summary="@string/pref_notifications_list_amount_summary"
-                        android:key="pref_key_notifications_amount"
-                        android:defaultValue="digiGreen"
-                        android:entries="@array/array_notifications_amount_strings"
-                        android:entryValues="@array/array_notifications_amount_integers" />
-                </PreferenceScreen>
-                <PreferenceScreen 
-                    android:title="@string/account_settings_label">
-
-                </PreferenceScreen>
-        </PreferenceCategory>
-</PreferenceScreen>
+<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
+    <header 
+        android:fragment="be.mume.quantifythis.fragments.PreferenceNotificationsFragment"
+        android:title="@string/notifications_settings_title"
+        android:summary="@string/notifications_settings_summary" />
+</preference-headers>
