--- a/iOS/QuantifyThis/QuantifyThis/en.lproj/MainStoryboard.storyboard
+++ b/iOS/QuantifyThis/QuantifyThis/en.lproj/MainStoryboard.storyboard
@@ -304,7 +304,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="sOf-nk-OWM" kind="push" id="Xbz-N4-P9S"/>
+                                    <segue destination="sDT-8b-mMc" kind="push" id="xoL-4y-tBZ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8tf-it-mq9">
@@ -402,6 +402,36 @@
             </objects>
             <point key="canvasLocation" x="-2152" y="701"/>
         </scene>
+        <!--App Settings View Controller-->
+        <scene sceneID="0c7-fs-3bY">
+            <objects>
+                <tableViewController id="sDT-8b-mMc" customClass="IASKAppSettingsViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="53B-Rf-XcB">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="RFs-UX-ECW">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="sDT-8b-mMc" id="Qdv-4o-e2C"/>
+                            <outlet property="delegate" destination="sDT-8b-mMc" id="QG9-ec-5LX"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="X55-V9-eJW"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gMw-Bb-16x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2120" y="2638"/>
+        </scene>
         <!--View Controller - Mood art-->
         <scene sceneID="jqU-PY-Am2">
             <objects>
@@ -435,10 +465,9 @@
         <!--Tab Bar Controller - Statistics-->
         <scene sceneID="26i-Uv-pVm">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W30-gM-Kpt" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController definesPresentationContext="YES" id="Xpd-Kx-Wjd" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Statistics" id="AxV-8d-AmX"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="0Wm-wY-5VC">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -449,23 +478,9 @@
                         <segue destination="MWe-WA-nPB" kind="relationship" relationship="viewControllers" id="sIQ-VH-JaE"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W30-gM-Kpt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2152" y="1754"/>
-        </scene>
-        <!--View Controller - Settings-->
-        <scene sceneID="tDJ-3P-AoG">
-            <objects>
-                <viewController id="sOf-nk-OWM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="DpE-YX-gCJ">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Settings" id="wXX-HT-XrZ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="itM-2f-GYl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2152" y="2747"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SDg-Xt-FrO">
@@ -483,6 +498,23 @@
             <point key="canvasLocation" x="-3231" y="702"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="IASKAppSettingsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IASKAppSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="delegate"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="RegisterMoodController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RegisterMoodController.h"/>
+            <relationships>
+                <relationship kind="action" name="registerMood:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
